<resources>
    <string name="app_name">Tours</string>
    <!--    Login Activity-->
    <string name="login_title_bar">Đăng nhập</string>
    <string name="login_hint_emailphone">Email hoặc Số điện thoại</string>
    <string name="login_hint_password">Mật khẩu</string>
    <string name="login_btn_text">Đăng nhập</string>
    <string name="login_link_forgot_password">Quên mật khẩu?</string>
    <string name="login_link_sign_up">Đăng ký</string>
    <string name="login_fb_btn_text">Đăng nhập bằng Facebook</string>
    <string name="login_gg_btn_text">Đăng nhập bằng Google</string>
    <string name="login_empty_emailphone">Chưa nhập email hoặc số điện thoại</string>
    <string name="login_empty_password">Chưa nhập mật khẩu</string>
    <string name="failed_fetch_api">Đã có lỗi trong quá trình gửi dữ liệu</string>
    <string name="unavailable_func">Chức năng chưa khả dụng</string>
    <string name="login_not_existed">Sai email/Số điện thoại hoặc mật khẩu</string>
    <string name="err_get_user_info">Lỗi lấy thông tin người dùng</string>
    <string name="facebook_app_id">695588897599189</string>
    <string name="fb_login_protocol_scheme">fb695588897599189</string>
    <string name="gg_server_client_id">284288180251-89m3dhb7cplqr1opp9d2gf4d814bbv8q.apps.googleusercontent.com</string>
    <string name="gg_app_secret">1-A7kVMbbtdjkomM9Mm4SAe8</string>
    <string name="gg_map_API">AIzaSyBAaJwCvtDH1mzS_0VdenGZ_poviu6qshY</string>
    <!--End Login Activity-->

    <!--    Navigation-->
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_explore">Điểm dừng</string>
    <string name="title_map">Theo dõi chuyến đi</string>
    <string name="title_notifications">Lời mời</string>
    <string name="title_user_settings">Tài khoản của bạn</string>
    <string name="title_user_trip">Chuyến đi cá nhân</string>
    <!--End Navigation-->

    <!--    Sign up-->
    <string name="register_empty_email">Bạn chưa nhập email</string>
    <string name="register_empty_pass">Bạn chưa nhập mật khẩu</string>
    <string name="register_empty_fullname">Bạn chưa nhập tên đầy đủ</string>
    <string name="register_empty_phone">Bạn chưa nhập số điện thoại</string>
    <string name="register_empty_address">Bạn chưa nhập địa chỉ</string>
    <string name="register_empty_dob">Bạn chưa nhập ngày tháng năm sinh</string>
    <string name="register_empty_gender">Bạn chưa chọn giới tính</string>
    <string name="successful_register">Đăng ký thành công</string>
    <string name="register_server_error">Lỗi Server, không tạo được tài khoản</string>
    <string name="register_email_existed">Email bạn đăng ký đã tồn tại</string>
    <string name="phone_email_existed">Số điện thoại bạn vừa đăng ký đã tồn tại</string>
    <string name="not_same_pass">Mật khẩu không trùng khớp</string>
    <string name="register_invalid_email">Email bạn nhập không tồn tại</string>
    <string name="register_invalid_phone">Số điện thoại bạn nhập không tồn tại</string>
    <!-- End   Sign up-->

    <!--    Map - Create stop point-->
    <string name="map_my_location">Vị trí của tôi</string>
    <string name="map_failed_to_get_device_location">Không thể xác định vị trí. Hãy chắn chắn GPS đã được bật</string>
    <string name="stop_point_empty_name">Bạn chưa nhập tên điểm dừng</string>
    <string name="stop_point_empty_address">Bạn chưa nhập địa chỉ</string>
    <string name="stop_point_empty_service_type">Bạn chưa chọn loại phục vụ</string>
    <string name="stop_point_empty_province">Bạn chưa chọn tỉnh /thành phố</string>
    <string name="stop_point_empty_arrive_time">Bạn chưa nhập thời gian tới</string>
    <string name="stop_point_empty_arrive_date">Bạn chưa nhập ngày tới</string>
    <string name="stop_point_empty_leave_time">Bạn chưa nhập thời gian tới</string>
    <string name="stop_point_empty_leave_date">Bạn chưa nhập ngày đi</string>
    <string name="stop_point_select_time">Chọn thời gian</string>
    <string name="stop_point_add_successfully">Đã cập nhật điểm dừng</string>
    <string name="no_stop_point_selected">Bạn chưa thêm điểm dừng nào</string>
    <string name="updated_stop_point_info">Thông tin điểm dừng đã được cập nhật</string>

    <!--    Tour info-->
    <string name="title_activity_tour_info">TourInfoActivity</string>
    <string name="title_bar_tour_info">Thông tin chuyến đi</string>
    <string name="tour_not_exists">Không tồn tại chuyến đi này</string>
    <string name="tour_open">Đang mở</string>
    <string name="tour_started">Đã bắt đầu</string>
    <string name="tour_cancled">Đã hủy</string>
    <string name="tour_closed">Đã kết thúc</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="host">Chủ xị</string>
    <string name="invite_success">Đã mời </string>
    <string name="edt_hint_search_member">Tìm kiếm thành viên bằng tên tài khoản, email, số điện  thoại</string>
    <string name="member_existed">Tài khoản này đã tham gia chuyến đi</string>

    <string name="empty_review">Chưa nhập nội dung đánh giá</string>
    <string name="empty_point_review">Chưa chọn số điểm đánh giá</string>
    <string name="add_review_successfully">Đã gửi đánh giá</string>
    <string name="tool_bar_review_stop_point_title">Đánh giá điểm dừng</string>

    <!--    user info-->
    <string name="change_avatar_successfully">Thay đổi avatar thành công</string>
    <string name="image_too_large">Lỗi! Hình ảnh quá lớn</string>
    <string name="server_err">Lỗi xử lý dữ liệu</string>

    <!--    inviation-->
    <string name="accept_successfully">Đã chấp nhận</string>
    <string name="refuse_successfully">Đã từ chối</string>
    <string name="existed_member">đã ở trong nhóm</string>
    <string name="already_invited">đã được mời từ trước</string>

    <!--    OTP-->
    <string name="sent_opt">Đã gửi mã OTP</string>
    <string name="wrong_parameter_type">Dữ liệu không hợp lệ</string>
    <string name="email_phone_not_exist">Email hoặc số điện thoại không tồn tại</string>
    <string name="empty_otp">Chưa nhập mã OTP</string>
    <string name="empty_new_password">Chưa nhập mật khẩu mới</string>
    <string name="empty_new_password_confirm">Chưa xác nhận mật khẩu mới</string>
    <string name="password_not_same">Mật khẩu xác nhận không giống</string>
    <string name="wrong_or_expired_otp">Mã OTP không đúng hoặc quá hạn</string>
    <string name="recovery_password_successfully">Khôi phục mật khẩu thành công</string>

    <string name="fire_base_key">AIzaSyDnbQCZQc8R754Qpafqd3XdykSwVHiRQeo</string>
    <string name="register_fire_base_failed">Register Firebase failed</string>
    <string name="register_fire_base_successful">Register Firebase successfully</string>

    <!--    Notification-->
    <string name="invite_title">Lời mời tham gia chuyến đi</string>

    <!--    Tour Direction-->
    <string name="notify_successfully">Đã gửi thông báo</string>
    <string name="invalid_notification">Thông báo không hợp lệ</string>
    <string name="empty_warning_speed">Chưa chọn loại thông báo</string>
    <string name="receiver_action_send_coordinate">receiver.action.sendCoordinate</string>
    <string name="receiver_action_send_notification_on_road">receiver.action.sendNotificationOnRoad</string>
    <string name="receiver_action_noti_text">receiver.action.notiText</string>
    <string name="receiver_action_firebase_noti_on_road">receiver.action.firebaseNotiOnRoad</string>
</resources>
