<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ygaps.travelapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.ygaps.travelapp.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore_stop_point" />

    <fragment
        android:id="@+id/navigation_user_trip"
        android:name="com.ygaps.travelapp.ui.home.HomeFragment"
        android:label="@string/title_user_trip"
        tools:layout="@layout/fragment_user_trip" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ygaps.travelapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_user_settings"
        android:name="com.ygaps.travelapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_user_settings"
        tools:layout="@layout/fragment_user_settings" />
</navigation>